--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,119 @@ nav {
     position: relative;
 }
 
+.preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 50px;
+    font-weight: 700;
+    z-index: 100000;
+
+    .top,
+    .bottom {
+        background: #000;
+        height: 50vh;
+        width: 100%;
+        transition: .5s ease !important;
+    }
+
+    .preloader-title {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 25px;
+        color: white;
+    }
+
+    .top {
+        animation: top 2s 1.52s forwards ease;
+        position: relative;
+        .preloader-title {
+            bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+            font-weight: 700;
+            animation: opacity 1s 1.3s forwards ease;
+        }
+    }
+
+    .loader-line {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        height: 2px;
+        background: #fff;
+        animation: loader 1.52s forwards ease-in-out;
+    }
+
+    .bottom {
+        position: relative;
+        animation: bottom 2s 1.5s forwards ease;
+
+        .preloader-title {
+            font-size: 15px;
+            top: 20px;
+            font-weight: 800;
+            color: rgb(181, 181, 181);
+            letter-spacing: 8px;
+            text-transform: uppercase;
+            animation: opacity 1s 1.3s forwards ease;
+        }
+    }
+
+
+    @keyframes opacity {
+        0%{
+            opacity: 1;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
+    @keyframes loader {
+        0% {
+            width: 0;
+        }
+
+        90% {
+            width: 100%;
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+    @keyframes top {
+        0% {
+            margin-bottom: 0;
+        }
+
+        100% {
+            margin-bottom: 50vh;
+        }
+    }
+
+    @keyframes bottom {
+        0% {
+            margin-top: 0;
+        }
+
+        100% {
+            margin-top: 50vh;
+        }
+    }
+
+}
 
 // HOME SWIPER
 .swiper {
@@ -116,9 +229,19 @@ nav {
         height: 30% !important;
         width: 50px;
         transition: 0.3s ease;
+
+        &:hover {
+            width: 100px;
+        }
+    }
+
+    .swiper-slide-thumb-active {
+        width: 100px;
     }
 
 }
+
+
 
 .slider-number {
     pointer-events: none;
@@ -130,9 +253,9 @@ nav {
     font-size: 140px;
 }
 
-.mySwiper .swiper-slide-thumb-active {
-    width: 100px;
-}
+
+
+
 
 .slide-titles {
     position: absolute;
@@ -140,10 +263,12 @@ nav {
     top: 170px;
     color: #fff;
     z-index: 10;
-    .description-title{
+
+    .description-title {
         max-width: 450px;
     }
-    a{
+
+    a {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -154,10 +279,12 @@ nav {
         width: 160px;
         padding: 9px 0;
         cursor: pointer;
-        &:hover{
+
+        &:hover {
             color: #fff;
         }
-        i{
+
+        i {
             width: 26px;
             height: 26px;
             display: flex;
@@ -200,10 +327,12 @@ nav {
     #home .slide-titles {
         left: 20px;
         width: 90%;
+
         .head-title {
             font-size: 40px;
         }
-        .description-title{
+
+        .description-title {
             font-size: 14px;
         }
 
