--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,13 +27,17 @@ nav {
     top: 0;
     width: 100%;
     height: 100vh;
-    display: flex;
+    display: none;
+    background: #000;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-size: 50px;
     font-weight: 700;
     z-index: 100000;
+    &.active {
+        display: flex;
+    }
 
     .top,
     .bottom {
@@ -54,6 +58,7 @@ nav {
     .top {
         animation: top 2s 1.52s forwards ease;
         position: relative;
+
         .preloader-title {
             bottom: 20px;
             text-transform: uppercase;
@@ -88,15 +93,16 @@ nav {
         }
     }
 
-
     @keyframes opacity {
-        0%{
+        0% {
             opacity: 1;
         }
-        100%{
+
+        100% {
             opacity: 0;
         }
     }
+
     @keyframes loader {
         0% {
             width: 0;
@@ -273,12 +279,12 @@ nav {
         justify-content: center;
         align-items: center;
         text-decoration: none;
+        cursor: pointer;
         color: #fff;
         border-radius: 22px;
         border: 1px solid rgba(255, 255, 255, 0.155);
         width: 160px;
         padding: 9px 0;
-        cursor: pointer;
 
         &:hover {
             color: #fff;
