--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,134 @@ nav {
     position: fixed;
     left: 0;
     top: 0;
+    width: 100%;
+    height: 80px;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+
+    .nav-wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .menu-toggle,
+        .logo {
+            z-index: 100;
+        }
+
+        .menu-toggle {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            color: white;
+            cursor: pointer;
+
+            .menu-icon {
+                display: flex;
+                flex-direction: column;
+                width: 25px;
+
+                span {
+                    height: 2px;
+                    background-color: #fff;
+                    margin: 3px 0;
+                    transition: 0.3s ease;
+
+                    &:nth-child(1) {
+                        width: 50%;
+                    }
+
+                    &:nth-child(3) {
+                        width: 50%;
+                        margin-left: auto;
+                    }
+
+                }
+
+            }
+
+
+            &:hover .menu-icon span {
+                width: 100% !important;
+            }
+
+            &.active .menu-icon span {
+                &:nth-child(1) {
+                    width: 100%;
+                    transform: rotate(45deg) translate(-3px, 14px);
+                }
+
+                &:nth-child(2) {
+                    visibility: hidden;
+                    opacity: 0;
+                }
+
+                &:nth-child(3) {
+                    width: 100%;
+                    transform: rotate(-45deg) translate(-3px, -14px);
+                }
+            }
+        }
+
+
+
+
+        .menu-content {
+            left: 0;
+            top: 0;
+            position: absolute;
+            width: 110%;
+            height: 100vh;
+            background: #000;
+            visibility: hidden;
+            opacity: 0;
+            transition: 0.8s ease;
+            transform: translateY(-100%) rotate(5deg);
+            padding-top: 130px;
+
+            &.active {
+                visibility: visible;
+                opacity: 1;
+                transform: translateY(0) rotate(0);
+
+            }
+
+            ul {
+                display: flex;
+                flex-direction: column;
+
+                li {
+                    display: inline;
+                    list-style: none;
+                    cursor: pointer;
+                    transition: 0.3s ease;
+
+                    &:hover {
+                        opacity: 0.4;
+                        margin-left: 10px;
+                    }
+
+                    span:nth-child(1) {
+                        color: rgb(124, 124, 124);
+                        margin-right: 10px;
+                    }
+
+                    * {
+                        font-weight: 600;
+                    }
+                }
+            }
+
+            .col-md-5 {
+                i {
+                    width: 40px;
+                }
+            }
+
+        }
+    }
 }
 
 #home {
@@ -35,6 +163,7 @@ nav {
     font-size: 50px;
     font-weight: 700;
     z-index: 100000;
+
     &.active {
         display: flex;
     }
@@ -342,6 +471,9 @@ nav {
             font-size: 14px;
         }
 
+    }
+    .col-md-5.border-start{
+        border: none !important;
     }
 }
 
