--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -157,7 +157,6 @@ nav {
     top: 0;
     width: 100%;
     height: 100vh;
-    display: none;
     background: #000;
     justify-content: center;
     align-items: center;
@@ -165,9 +164,14 @@ nav {
     font-size: 50px;
     font-weight: 700;
     z-index: 100000;
-
+    *{
+        display: none;
+    }
     &.active {
         display: flex;
+        *{
+            display: flex;
+        }
     }
 
     .top,
