--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,9 @@ nav .nav-wrapper .menu-content .col-md-5 i {
   top: 0;
   width: 100%;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -242,6 +245,38 @@ nav .nav-wrapper .menu-content .col-md-5 i {
   color: #b5b5b5;
   letter-spacing: 8px;
   text-transform: uppercase;
+  -webkit-animation: blink 2s infinite ease;
+          animation: blink 2s infinite ease;
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes opacity {
