--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -212,7 +212,7 @@ nav {
             color: rgb(181, 181, 181);
             letter-spacing: 8px;
             text-transform: uppercase;
-            animation: blink 2s infinite ease;
+            animation: blink 2.3s infinite ease;
         }
     }
 
@@ -220,14 +220,17 @@ nav {
         0% {
             opacity: 0;
         }
-        30%{
+        25%{
             opacity: 1;
         }
-        60%{
+        50%{
             opacity: 0;
         }
-        100%{
+        75%{
             opacity: 1;
+        }
+        100%{
+            opacity: 0;
         }
     }
 
