--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,15 +107,14 @@ nav .nav-wrapper .menu-content {
   left: 0;
   top: 0;
   position: absolute;
-  width: 110%;
+  width: 100%;
   height: 100vh;
-  background: #000;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: 0.8s ease;
   transition: 0.8s ease;
-  -webkit-transform: translateY(-100%) rotate(5deg);
-          transform: translateY(-100%) rotate(5deg);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
   padding-top: 100px;
   overflow-x: hidden;
   overflow-y: auto;
@@ -124,8 +123,8 @@ nav .nav-wrapper .menu-content {
 nav .nav-wrapper .menu-content.active {
   visibility: visible;
   opacity: 1;
-  -webkit-transform: translateY(0) rotate(0);
-          transform: translateY(0) rotate(0);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 nav .nav-wrapper .menu-content ul {
@@ -197,7 +196,6 @@ nav .nav-wrapper .menu-content .col-md-5 i {
 
 .preloader .top,
 .preloader .bottom {
-  background: #000;
   height: 50vh;
   width: 100%;
   -webkit-transition: .5s ease !important;
@@ -210,7 +208,6 @@ nav .nav-wrapper .menu-content .col-md-5 i {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   font-size: 25px;
-  color: white;
 }
 
 .preloader .top {
@@ -231,7 +228,7 @@ nav .nav-wrapper .menu-content .col-md-5 i {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   height: 2px;
-  background: #fff;
+  background: #949494;
 }
 
 .preloader .bottom {
@@ -375,7 +372,6 @@ nav .nav-wrapper .menu-content .col-md-5 i {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -560,6 +556,24 @@ nav .nav-wrapper .menu-content .col-md-5 i {
   }
   .col-md-5.border-start {
     border: none !important;
+  }
+}
+
+.image-box {
+  height: 400px;
+  padding: 3rem 4rem !important;
+  background: #0b0b0b;
+}
+
+.image-box img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .image-box {
+    height: 300px;
+    padding: 1.8rem 2.5rem !important;
   }
 }
 /*# sourceMappingURL=style.css.map */
