--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -90,13 +90,12 @@ nav {
             left: 0;
             top: 0;
             position: absolute;
-            width: 110%;
+            width: 100%;
             height: 100vh;
-            background: #000;
             visibility: hidden;
             opacity: 0;
             transition: 0.8s ease;
-            transform: translateY(-100%) rotate(5deg);
+            transform: translateY(-100%);
             padding-top: 100px;
             overflow-x: hidden;
             overflow-y: auto;
@@ -104,7 +103,7 @@ nav {
             &.active {
                 visibility: visible;
                 opacity: 1;
-                transform: translateY(0) rotate(0);
+                transform: translateY(0);
 
             }
 
@@ -168,7 +167,6 @@ nav {
 
     .top,
     .bottom {
-        background: #000;
         height: 50vh;
         width: 100%;
         transition: .5s ease !important;
@@ -179,7 +177,6 @@ nav {
         left: 50%;
         transform: translateX(-50%);
         font-size: 25px;
-        color: white;
     }
 
     .top {
@@ -199,7 +196,7 @@ nav {
         left: 0;
         transform: translateY(-50%);
         height: 2px;
-        background: #fff;
+        background: rgb(148, 148, 148);
     }
 
     .bottom {
@@ -292,8 +289,6 @@ nav {
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
-
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -490,3 +485,22 @@ nav {
 }
 
 // HOME SWIPER
+
+
+// About
+.image-box{
+    height: 400px;
+    padding: 3rem 4rem !important;
+    background: rgb(11, 11, 11);
+    img{
+        object-fit: cover;
+    }
+}
+@media screen and (max-width: 768px) {
+    .image-box{
+        height: 300px;
+        padding: 1.8rem 2.5rem !important;
+    }
+}
+
+// About
