--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -562,7 +562,6 @@ nav .nav-wrapper .menu-content .col-md-5 i {
 .image-box {
   height: 400px;
   padding: 3rem 4rem !important;
-  background: #0b0b0b;
 }
 
 .image-box img {
@@ -575,5 +574,59 @@ nav .nav-wrapper .menu-content .col-md-5 i {
     height: 300px;
     padding: 1rem 1.5rem !important;
   }
+}
+
+#portfolio .swiper {
+  height: 400px;
+}
+
+#portfolio .swiper .swiper-pagination span {
+  background: #fff;
+  width: 24px !important;
+  height: 2px !important;
+  border-radius: 0%;
+  -webkit-transition: 0.3s ease !important;
+  transition: 0.3s ease !important;
+}
+
+#portfolio .swiper .swiper-pagination span.swiper-pagination-bullet-active {
+  width: 30px !important;
+}
+
+#portfolio .swiper .swiper-slide {
+  cursor: pointer;
+}
+
+#portfolio .swiper .swiper-slide span {
+  padding: 20px 0;
+  width: 100%;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.916)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.916), rgba(255, 255, 255, 0));
+  bottom: 0px;
+}
+
+#portfolio .swiper .swiper-slide:hover span {
+  padding: 20px 0 40px 0;
+}
+
+#feedback .swiper-pagination span {
+  background: #fff;
+  width: 24px !important;
+  height: 2px !important;
+  border-radius: 0%;
+  -webkit-transition: 0.3s ease !important;
+  transition: 0.3s ease !important;
+}
+
+#feedback .swiper-pagination span.swiper-pagination-bullet-active {
+  width: 30px !important;
+}
+
+#feedback .swiper-slide .feedback-author img {
+  width: 50px !important;
+  border-radius: 50%;
+  background: #141414;
 }
 /*# sourceMappingURL=style.css.map */
