--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -129,7 +129,17 @@
 .ls-1 {
     letter-spacing: 0.8px;
 }
+.ls-4 {
+    letter-spacing: 4px;
+}
 
 .lh-1 {
     line-height: 24px !important;
+}
+.border{
+    border: 1px solid #898989 !important;
+}
+a:hover{
+    text-decoration: none;
+    color: rgb(151, 151, 151);
 }
