--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@ body {
     scroll-behavior: smooth;
     &::-webkit-scrollbar {
         width: 10px;
+        background: #000;
     }
 
     &::-webkit-scrollbar-thumb {
@@ -23,7 +24,7 @@ body {
     }
 
     &::-webkit-scrollbar-thumb {
-        background-color: #000;
+        background-color: #818B99;
     }
 }
 
