--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,30 @@ body::-webkit-scrollbar-thumb {
   background-color: #818B99;
 }
 
+.theme {
+  cursor: pointer;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: white;
+  color: #000;
+  border-radius: 50% 0 0 50%;
+  width: 30px;
+  height: 30px;
+  z-index: 10;
+}
+
 nav {
   position: absolute;
   left: 0;
@@ -545,6 +569,7 @@ nav .nav-wrapper .menu-content .col-md-5 i {
 
 .slide-titles .description-title {
   max-width: 450px;
+  color: rgba(255, 255, 255, 0.701);
 }
 
 .slide-titles a {
@@ -668,6 +693,7 @@ nav .nav-wrapper .menu-content .col-md-5 i {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.916)), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(to top, rgba(0, 0, 0, 0.916), rgba(255, 255, 255, 0));
   bottom: 0px;
+  color: #fff;
 }
 
 #portfolio .swiper .swiper-slide:hover span {
@@ -745,5 +771,42 @@ footer .social a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+body.active .text-current {
+  color: black;
+}
+
+body.active .text-current-50 {
+  color: rgba(0, 0, 0, 0.53);
+}
+
+body.active .bg-current {
+  background: #e4e4e4;
+}
+
+body.active .bg-current-low {
+  background: #cecece;
+}
+
+body.active #portfolio .swiper .swiper-pagination span, #portfolio .swiper .swiper-pagination body.active span, body.active #feedback .swiper-pagination span, #feedback .swiper-pagination body.active span, body.active #blog .swiper .swiper-pagination span, #blog .swiper .swiper-pagination body.active span {
+  background: black;
+  width: 24px !important;
+  height: 2px !important;
+  border-radius: 0%;
+  -webkit-transition: 0.3s ease !important;
+  transition: 0.3s ease !important;
+}
+
+body.active #portfolio .swiper .swiper-pagination span.swiper-pagination-bullet-active, #portfolio .swiper .swiper-pagination body.active span.swiper-pagination-bullet-active, body.active #feedback .swiper-pagination span.swiper-pagination-bullet-active, #feedback .swiper-pagination body.active span.swiper-pagination-bullet-active, body.active #blog .swiper .swiper-pagination span.swiper-pagination-bullet-active, #blog .swiper .swiper-pagination body.active span.swiper-pagination-bullet-active {
+  width: 34px !important;
+}
+
+body.active nav {
+  background: #fff;
+}
+
+body.active nav .menu-icon span {
+  background: #000 !important;
 }
 /*# sourceMappingURL=style.css.map */
