--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -724,6 +724,11 @@ footer {
 
 // light mode
 body.active {
+    .text-purple{
+        color: rgb(216 162 0);
+        transition: 0.3s ease;
+
+    }
     .text-current {
         color: rgb(0, 0, 0);
         transition: 0.3s ease;
