--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -420,7 +420,7 @@ nav {
 }
 
 .mySwiper {
-    height: 200px;
+    height: 160px;
     width: 100px;
     position: absolute !important;
     left: 0 !important;
@@ -434,7 +434,7 @@ nav {
 
     .swiper-slide {
         cursor: pointer;
-        height: 30% !important;
+        height: 48px !important;
         width: 50px;
         transition: 0.3s ease;
 
@@ -725,9 +725,8 @@ footer {
 // light mode
 body.active {
     .text-purple{
-        color: rgb(216 162 0);
+        color: rgb(216, 162, 0);
         transition: 0.3s ease;
-
     }
     .text-current {
         color: rgb(0, 0, 0);
