--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 50% 0 0 50%;
   width: 30px;
   height: 30px;
-  z-index: 10;
+  z-index: 101;
 }
 
 nav {
@@ -771,6 +771,26 @@ footer .social a {
           align-items: center;
 }
 
+body.active {
+  scroll-behavior: smooth;
+}
+
+body.active::-webkit-scrollbar {
+  width: 10px;
+  background: #ffffff;
+}
+
+body.active::-webkit-scrollbar-thumb {
+  background-color: #000;
+  border: 3px solid transparent;
+  border-radius: 9px;
+  background-clip: content-box;
+}
+
+body.active::-webkit-scrollbar-thumb {
+  background-color: #000;
+}
+
 body.active .text-purple {
   color: #d8a200;
   -webkit-transition: 0.3s ease;
@@ -784,7 +804,7 @@ body.active .text-current {
 }
 
 body.active .text-current-50 {
-  color: rgba(0, 0, 0, 0.53);
+  color: rgba(0, 0, 0, 0.53) !important;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
