--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,7 +43,7 @@ body {
     border-radius: 50% 0 0 50%;
     width: 30px;
     height: 30px;
-    z-index: 10;
+    z-index: 101;
 }
 
 nav {
@@ -724,6 +724,24 @@ footer {
 
 // light mode
 body.active {
+    scroll-behavior: smooth;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+        background: #ffffff;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #000;
+        border: 3px solid transparent;
+        border-radius: 9px;
+        background-clip: content-box;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #000;
+    }
+
     .text-purple{
         color: rgb(216, 162, 0);
         transition: 0.3s ease;
@@ -734,7 +752,7 @@ body.active {
     }
     
     .text-current-50 {
-        color: rgba(0, 0, 0, 0.53);
+        color: rgba(0, 0, 0, 0.53) !important;
         transition: 0.3s ease;
     }
     
