--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ body {
 body::-webkit-scrollbar {
   width: 10px;
   background: #000;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -20,9 +22,13 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid transparent;
   border-radius: 9px;
   background-clip: content-box;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 body::-webkit-scrollbar-thumb {
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   background-color: #818B99;
 }
 
@@ -775,6 +781,10 @@ body.active {
   scroll-behavior: smooth;
 }
 
+body.active #home .description-title {
+  color: rgba(255, 255, 255, 0.68);
+}
+
 body.active::-webkit-scrollbar {
   width: 10px;
   background: #ffffff;
@@ -804,7 +814,7 @@ body.active .text-current {
 }
 
 body.active .text-current-50 {
-  color: rgba(0, 0, 0, 0.53) !important;
+  color: rgba(0, 0, 0, 0.53);
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
@@ -839,7 +849,7 @@ body.active nav {
   transition: 0.3s ease;
 }
 
-body.active nav .logo, body.active nav .menu-toggle {
+body.active nav .menu-toggle {
   color: #fff;
 }
 
@@ -847,7 +857,7 @@ body.active nav.sticky {
   background: #fff;
 }
 
-body.active nav.sticky .logo, body.active nav.sticky .menu-toggle {
+body.active nav.sticky .menu-toggle {
   color: #000;
 }
 
